--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -16,7 +16,9 @@
         <li><a href="/#home">Home</a></li>
         <li><a href="/#features">Features</a></li>
         <li><a href="/#team">Team</a></li>
-        <li><a href="/#reserve">Reserve your address!</a></li>
+        <li><a href="/#reserve">Pre-Register</a></li>
+        <li><a href="https://blog.nebulis.io">Blog</a></li>
+        <li><a href="https://community.nebulis.io">Community</a></li>
       </ul>
     </div>
   </div>
