--- a/views/docs.hbs
+++ b/views/docs.hbs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DOCS : Nebulis - A federated system of smart contracts</title>
+    <title>Documentation : Nebulis - A federated system of smart contracts</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/style.css">
   </head>
@@ -12,7 +12,7 @@
     {{> navbar }}
 
     <div class="container">
-      
+
       <div class="text-center section">
 
         <h1>Documentation</h1>
