--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -19,6 +19,7 @@
         <li><a href="/#reserve">Pre-Register</a></li>
         <li><a href="https://blog.nebulis.io">Blog</a></li>
         <li><a href="https://community.nebulis.io">Community</a></li>
+        <li><a href="/docs">Docs</a></li>
       </ul>
     </div>
   </div>
