--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <div class="row text-center section" id="home">
   <div class="col-lg-6 col-lg-offset-3">
     <img src="/img/gem_flat_small.png" class="img-responsive" />
-    <h1>Reserve Your Interplanetary Address!</h1>
+    <h1>Reserve Your Interplanetary Address</h1>
     <p>A global distributed directory intended to upgrade and replace the existing Domain Name System using the Ethereum blockchain. A new phonebook for a new web. Nebulis is compatible with a wide variety of content-addressed protocols like IPFS and MaidSafe.</p>
     <a href="#reserve" class="btn btn-primary btn-lg pre-register-button">Pre-Register</a>
   </div>
