--- a/views/partials/reserve.hbs
+++ b/views/partials/reserve.hbs
@@ -1,5 +1,5 @@
 <div id="reserve" class="section">
-  <h1 class="text-center">Pre-register Your Interplanetary Address!</h1>
+  <h1 class="text-center">Pre-register Your Interplanetary Address</h1>
   <div class="row">
     <div class="col-lg-4 col-lg-offset-4">
       <form method="post" action="/reserve" id="reservation_form">
