added first memo

--- a/views/docs.hbs
+++ b/views/docs.hbs
@@ -15,11 +15,10 @@
 
       <div class="text-center section">
 
-        <h1>Documentation</h1>
+        <h1>Documentation</h1> 
 
-        <p>
-
-        </p>
+        <a href="https://ipfs.io/ipfs/QmYzKSpsYVvxJZU7qaR6EVEpoGgGpDRNmC2mwryF3wbd7S/Nebulis.pdf">
+        <h4>First Memorandum</h4></a>
 
       </div>
 
