Enable mailchimp subscription

--- a/views/partials/reserve.hbs
+++ b/views/partials/reserve.hbs
@@ -29,9 +29,9 @@
           <label for="domain">Domain</label>
           <input type="text" class="form-control" id="domain" placeholder="Domain" name="domain" required>
         </div>
-        {{!-- <div class="checkbox">
+        <div class="checkbox">
           <label><input type="checkbox" name="subscribe"> Subscribe to mailing list</label>
-        </div> --}}
+        </div>
         <button type="submit" class="btn btn-primary btn-block">Reserve Now</button>
       </form>
     </div>
