--- a/views/docs.hbs
+++ b/views/docs.hbs
@@ -4,27 +4,21 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Documentation : Nebulis - A federated system of smart contracts</title>
+    <title>Documentation | Nebulis</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     {{> navbar }}
-
     <div class="container">
-
       <div class="text-center section">
-
-        <h1>Documentation</h1> 
-
-        <a href="https://ipfs.io/ipfs/QmYzKSpsYVvxJZU7qaR6EVEpoGgGpDRNmC2mwryF3wbd7S/Nebulis.pdf">
-        <h4>First Memorandum</h4></a>
-
+        <h1>Documentation</h1>
+        <h4>
+          <a href="https://ipfs.io/ipfs/QmYzKSpsYVvxJZU7qaR6EVEpoGgGpDRNmC2mwryF3wbd7S/Nebulis.pdf">First Memorandum</a>
+        </h4>
       </div>
-
     </div>
     {{> footer }}
     <script src="/js/vendor.js"></script>
-
   </body>
 </html>
