fixed typo in clusters, show => shop

--- a/views/partials/reserve.hbs
+++ b/views/partials/reserve.hbs
@@ -21,7 +21,7 @@
             <option value="music">music</option>
             <option value="watch">watch</option>
             <option value="learn">learn</option>
-            <option value="show">show</option>
+            <option value="show">shop</option>
             <option value="public">public</option>
           </select>
         </div>
