--- a/less/nebulis.less
+++ b/less/nebulis.less
@@ -45,6 +45,10 @@ body {
   color: #99979c;
   text-align: center;
   background-color: #2a2730;
+
+	p {
+		margin: 0;
+	}
 }
 
 .pre-register-button {
@@ -81,13 +85,7 @@ body {
 	}
 }
 
-#team {
-	.caption {
-		h4 {
-			margin-bottom: 2px;
-		}
-	}
-
+#team, #social {
 	ul {
 		margin-bottom: 0;
 	}
