--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -8,15 +8,16 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <img src="/img/gem_flat_small.png" class="img-responsive"/> Nebulis
+        <img src="/img/logo_small.png" class="img-responsive"/> Nebulis
       </a>
     </div>
     <div class="collapse navbar-collapse" id="nebulis-navbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/#reserve">Pre-Register</a></li>
         <li><a href="/#features">Features</a></li>
+        <li><a href="/#reserve">Pre-Register</a></li>
         <li><a href="/docs">Docs</a></li>
         <li><a href="/team">Team</a></li>
+        <li><a href="/#social">Social</a></li>
         <li><a href="https://blog.nebulis.io">Blog</a></li>
         <li><a href="https://community.nebulis.io">Community</a></li>
       </ul>
