--- a/views/team.hbs
+++ b/views/team.hbs
@@ -1,40 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Team | Nebulis</title>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/style.css">
-  </head>
-  <body>
-    {{> navbar }}
-    <div class="container">
-      <div id="team" class="text-center section">
-        <h1>Team</h1>
-        <div class="row">
-          {{# each team }}
-          <div class="col-lg-3">
-            <div class="thumbnail">
-              <img src="/img/team/{{ photo }}" alt="{{ name }}" class="img-responsive img-rounded">
-              <div class="caption">
-                <h4>{{ name }}</h4>
-                <p>{{ position }}</p>
-                <p>{{ bio }}</p>
-                <ul class="list-inline list-unstyled social-links">
-                  <li><a href="{{ social.linkedin }}" target="_blank"><img src="/img/linkedin.png" /></a></li>
-                  <li><a href="{{ social.twitter }}" target="_blank"><img src="/img/twitter.png" /></a></li>
-                  <li><a href="{{ social.facebook }}" target="_blank"><img src="/img/facebook.png" /></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          {{/ each }}
+{{!< layout/default }}
+
+<div class="page-header">
+  <h1>Team</h1>
+</div>
+
+<div class="text-center" id="team">
+  <div class="row">
+    {{# each team }}
+    <div class="col-lg-3">
+      <div class="thumbnail">
+        <img src="/img/team/{{ photo }}" alt="{{ name }}" class="img-responsive img-rounded">
+        <div class="caption">
+          <h4>{{ name }}</h4>
+          <p>{{ position }}</p>
+          <p>{{ bio }}</p>
+          <ul class="list-inline list-unstyled social-links">
+            <li><a href="{{ social.linkedin }}" target="_blank"><img src="/img/linkedin.png" /></a></li>
+            <li><a href="{{ social.twitter }}" target="_blank"><img src="/img/twitter.png" /></a></li>
+            <li><a href="{{ social.facebook }}" target="_blank"><img src="/img/facebook.png" /></a></li>
+          </ul>
         </div>
       </div>
     </div>
-    {{> footer }}
-    <script src="/js/vendor.js"></script>
-  </body>
-</html>
+    {{/ each }}
+  </div>
+</div>
