--- a/views/partials/meta.hbs
+++ b/views/partials/meta.hbs
@@ -3,13 +3,16 @@
 <meta property="og:url" content="{{ url }}" />
 <meta property="og:title" content="{{ title }}" />
 <meta property="og:description" content="{{ description }}" />
-<meta property="og:image" content="https://www.nebulis.io/img/mountain.png" />
-<meta property="fb:app_id" content="100401903768172" />
+<meta property="og:image" content="https://www.nebulis.io/img/cover.png" />
+<meta property="og:image:width" content="600px" />
+<meta property="og:image:height" content="315px" />
 <meta property="og:site_name" content="Nebulis" />
-<meta property="og:type" content="website" />
+
+<meta property="fb:app_id" content="100401903768172" />
+<meta property="fb:admins" content="1684195558,1463358656" />
 
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@projectnebulis" />
 <meta name="twitter:title" content="{{ title }}" />
 <meta name="twitter:description" content="{{ description }}" />
-<meta name="twitter:image" content="https://www.nebulis.io/img/mountain.png" />
+<meta name="twitter:image" content="https://www.nebulis.io/img/cover.png" />
