--- a/views/partials/meta.hbs
+++ b/views/partials/meta.hbs
@@ -4,8 +4,8 @@
 <meta property="og:title" content="{{ title }}" />
 <meta property="og:description" content="{{ description }}" />
 <meta property="og:image" content="https://www.nebulis.io/img/cover.png" />
-<meta property="og:image:width" content="600px" />
-<meta property="og:image:height" content="315px" />
+<meta property="og:image:width" content="600" />
+<meta property="og:image:height" content="315" />
 <meta property="og:site_name" content="Nebulis" />
 
 <meta property="fb:app_id" content="100401903768172" />
