--- a/views/docs.hbs
+++ b/views/docs.hbs
@@ -4,6 +4,8 @@
   <h1>Documentation</h1>
 </div>
 
-<ul>
-  <li><a href="https://ipfs.io/ipfs/QmYzKSpsYVvxJZU7qaR6EVEpoGgGpDRNmC2mwryF3wbd7S/Nebulis.pdf" target="_blank">First Memorandum</a></li>
-</ul>
+<div id="community">
+  <ul>
+    <li><a href="https://ipfs.io/ipfs/QmYzKSpsYVvxJZU7qaR6EVEpoGgGpDRNmC2mwryF3wbd7S/Nebulis.pdf" target="_blank">First Memorandum</a></li>
+  </ul>
+</div>
