added github link

--- a/views/layout/default.hbs
+++ b/views/layout/default.hbs
@@ -8,6 +8,7 @@
     {{> meta }}
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
     {{{ block 'css' }}}
   </head>
   <body>
