Add github link and remove font-awesome

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -4,16 +4,32 @@
       <div class="col-lg-6">
         <h1>Community</h1>
         <ul class="list-unstyled social-links">
-          <li><a href="https://twitter.com/projectnebulis" target="_blank"><img src="/img/twitter.png" /> @projectnebulis</a></li>
-          <li><a href="https://www.facebook.com/nebulis.io" target="_blank"><img src="/img/facebook.png" /> nebulis.io</a></li>
-          <li><a href="https://www.linkedin.com/company/nebulis" target="_blank"><img src="/img/linkedin.png" /> Nebulis</a></li>
-          <li><a href="https://blog.nebulis.io"><img src="/img/medium.png" /> Blog</a></li>
-          <li><a href="https://community.nebulis.io"><img src="/img/forum.png" /> Community Forum</a></li>
-          <li><a href="mailto:info@nebulis.io"><img src="/img/email.png" /> info@nebulis.io</a></li>
+          <li>
+            <a href="https://twitter.com/projectnebulis" target="_blank"><img src="/img/twitter.png" /> Twitter</a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/nebulis.io" target="_blank"><img src="/img/facebook.png" /> Facebook</a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/company/nebulis" target="_blank"><img src="/img/linkedin.png" /> LinkedIn</a>
+          </li>
+          <li>
+            <a href="https://blog.nebulis.io"><img src="/img/github.png" /> GitHub</a>
+          </li>
+          <li>
+            <a href="https://blog.nebulis.io"><img src="/img/medium.png" /> Blog</a>
+          </li>
+          <li>
+            <a href="https://community.nebulis.io"><img src="/img/forum.png" /> Community Forum</a>
+          </li>
+          <li>
+            <a href="mailto:info@nebulis.io"><img src="/img/email.png" /> Email</a>
+          </li>
         </ul>
       </div>
       <div class="col-lg-6">
-        <a class="twitter-timeline" data-height="500" data-theme="light" data-link-color="#3aa39a" href="https://twitter.com/projectnebulis">Tweets by projectnebulis</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <h1>Twitter</h1>
+        <a class="twitter-timeline" data-height="500" data-theme="light" data-chrome="nofooter noheader" data-link-color="#3aa39a" href="https://twitter.com/projectnebulis">Tweets by projectnebulis</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
     </div>
 
