Correct github link

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -14,7 +14,7 @@
             <a href="https://www.linkedin.com/company/nebulis" target="_blank"><img src="/img/linkedin.png" /> LinkedIn</a>
           </li>
           <li>
-            <a href="https://blog.nebulis.io"><img src="/img/github.png" /> GitHub</a>
+            <a href="https://github.com/nebulis-io"><img src="/img/github.png" /> GitHub</a>
           </li>
           <li>
             <a href="https://blog.nebulis.io"><img src="/img/medium.png" /> Blog</a>
