--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -17,6 +17,7 @@
         <li><a href="/#reserve">Pre-Register</a></li>
         <li><a href="/docs">Docs</a></li>
         <li><a href="/team">Team</a></li>
+        <li><a href="https://github.com/nebulis-io" target="_blank">GitHub</a></li>
       </ul>
     </div>
   </div>
