--- a/views/layout/default.hbs
+++ b/views/layout/default.hbs
@@ -9,6 +9,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/css/style.css">
     {{{ block 'css' }}}
+    {{> mixpanel }}
   </head>
   <body>
     {{> navbar }}
