Add community to navbar and fix typo in features

--- a/views/partials/features.hbs
+++ b/views/partials/features.hbs
@@ -14,7 +14,7 @@
     <div class="col-lg-4">
       <img src="/img/scaleable.png" class="img-responsive" />
       <h3>Scalable</h3>
-      <p>With the introduction of sharding and proof of stake, the Ethereum blockchain is scalable to the requirements of a global directory will millions of records.</p>
+      <p>With the introduction of sharding and proof of stake, the Ethereum blockchain is scalable to the requirements of a global directory with millions of records.</p>
     </div>
   </div>
 </div>
