--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,7 +1,7 @@
 <div class="footer">
   <div class="container">
     <div class="row text-left">
-      <div class="col-lg-6">
+      <div class="col-lg-6" id="community">
         <h1>Community</h1>
         <ul class="list-unstyled social-links">
           <li>
