--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{ title }} | Nebulis</title>
     {{> meta }}
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css" />
     {{{ block 'css' }}}
     {{> mixpanel }}
   </head>
@@ -15,7 +15,7 @@
     {{> navbar }}
     {{{ block 'pre-content' }}}
     <div class="container">
-      {{{ content }}}
+      {{{ body }}}
     </div>
     {{{ block 'post-content' }}}
     {{> footer }}
