--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,8 +1,20 @@
 <div class="row text-center section" id="home">
   <div class="col-lg-6 col-lg-offset-3">
-    <img src="/img/logo_small.png" class="img-responsive" />
+    {{!-- <img src="/img/logo_small.png" class="img-responsive" /> --}}
     <h1>Reserve Your Interplanetary Address</h1>
-    <p>A global distributed directory intended to upgrade and replace the existing Domain Name System using the Ethereum blockchain. A new phonebook for a new web. Nebulis is compatible with a wide variety of content-addressed protocols like IPFS and MaidSafe.</p>
-    <a href="#reserve" class="btn btn-primary btn-lg pre-register-button">Pre-Register</a>
+    <p>Domain on a global distributed directory intended to upgrade and replace the existing Domain Name System using the Ethereum blockchain. A new phonebook for a new web. Nebulis is compatible with a wide variety of content-addressed protocols like IPFS and MaidSafe.</p>
+    <form method="get" action="/reserve">
+      <div class="input-group">
+        <select class="form-control" name="cluster" id="cluster" required>
+          {{# each clusters }}
+            <option value="{{ this }}">{{ this }}</option>
+          {{/ each }}
+        </select>
+        <input type="text" class="form-control" name="domain" placeholder="Domain" required/>
+        <span class="input-group-btn">
+          <button class="btn btn-primary pre-register-button" type="submit">Pre-Register</button>
+        </span>
+      </div>
+    </form>
   </div>
 </div>
