--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-static-top">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nebulis-navbar" aria-expanded="false">
@@ -14,11 +14,16 @@
     <div class="collapse navbar-collapse" id="nebulis-navbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/#features">Features</a></li>
-        <li><a href="/#reserve">Pre-Register</a></li>
         <li><a href="/docs">Docs</a></li>
         <li><a href="/team">Team</a></li>
         <li><a href="/#community">Community</a></li>
         <li><a href="https://github.com/nebulis-io" target="_blank">GitHub</a></li>
+        {{# if user }}
+          <li><a href="/dashboard">{{ user.name }}</a></li>
+          <li><a href="/account/logout">Logout</a></li>
+        {{ else }}
+          <li><a href="/account">Login</a></li>
+        {{/ if }}
       </ul>
     </div>
   </div>
