--- a/views/partials/reserve.hbs
+++ b/views/partials/reserve.hbs
@@ -4,15 +4,6 @@
     <div class="col-lg-4 col-lg-offset-4">
       <form method="post" action="/reserve" id="reservation_form">
         <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" class="form-control" id="name" placeholder="Name" name="name" required>
-        </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" class="form-control" id="email" placeholder="Email" name="email" required>
-          <p class="help-block">We'll never share your email with anyone else.</p>
-        </div>
-        <div class="form-group">
           <label for="cluster">Cluster</label>
           <select class="form-control" name="cluster" id="cluster" required>
             {{# each clusters }}
@@ -21,11 +12,11 @@
           </select>
         </div>
         <div class="form-group">
-          <label for="domain">Domain</label>
-          <input type="text" class="form-control" id="domain" placeholder="Domain" name="domain" required>
+          <label for="address">Address</label>
+          <input type="text" class="form-control" id="address" placeholder="Address" name="address" required>
         </div>
         <div class="checkbox">
-          <label><input type="checkbox" name="subscribe"> Subscribe to mailing list</label>
+          <label><input type="checkbox" name="subscribe"> Subscribe to mailing list for updates</label>
         </div>
         <button type="submit" class="btn btn-primary btn-block">Reserve Now</button>
       </form>
